not commited in a while

--- a/PyTut2_Types.ipynb
+++ b/PyTut2_Types.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,9 @@
     "as         def        from       nonlocal   while\n",
     "assert     del        global     not        with\n",
     "async      elif       if         or         yield\n",
-    "```"
+    "```\n",
+    "\n",
+    "Or python built-in objects, functions and identifiers, listed with \"dir(\\_\\_builtin\\_\\_)\""
    ]
   },
   {
@@ -841,7 +843,7 @@
     }
    ],
    "source": [
-    "# Get the max item in list\n",
+    "# Get the max item in list using builtin max\n",
     "print(max(to_do_list))"
    ]
   },
@@ -1094,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1110,7 @@
     }
    ],
    "source": [
-    "# String formatting\n",
+    "# String formatting using modulus operator %\n",
     "name = 'World'\n",
     "num = 105\n",
     "\n",
@@ -1149,7 +1151,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Xhere           X           hereX     here      Xhere           X\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ver 2.6 also support left/right center justifiers <^>;\n",
+    "text = 'here'\n",
+    "print('X{:15}X{:>15}X{:^15}X{:<15}X'.format(text, text, text, text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1158,9 +1179,9 @@
      "text": [
       "Hello Mark Butty there are 10 characters in your name\n",
       "5 x 4 = 20\n",
-      "PI is      3.142 in binary\n",
+      "PI is   3.1416   in binary\n",
       "Conversion also work: 105 = Hex(69) = Oct(151) = Binary 1101001\n",
-      "Today is Thursday October 04, 2018\n"
+      "Today is Thursday February 21, 2019\n"
      ]
     }
    ],
@@ -1168,13 +1189,36 @@
     "# The best new feature in python 3.6 is 'f' string interpolation;\n",
     "import math, datetime\n",
     "name = 'Mark Butty'\n",
-    "width, precision = 10, 4\n",
+    "width, precision = 10, 5\n",
     "\n",
     "print(f'Hello {name} there are {len(name)} characters in your name')\n",
     "print(f'5 x 4 = {5 * 4}')\n",
-    "print(f'PI is {math.pi:{width}.{precision}} in binary')\n",
+    "print(f'PI is {math.pi:^{width}.{precision}} in binary')\n",
     "print(f'Conversion also work: {105:d} = Hex({105:x}) = Oct({105:o}) = Binary {105:b}')\n",
     "print(f'Today is {datetime.datetime.today():%A %B %d, %Y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Start_time              End_time       VolCount  ZeroReclaim_MB    Target_MB    Actual_MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mixing format and interpolation - useful for headings;\n",
+    "\n",
+    "mbflag = True\n",
+    "units = 'MB' if mbflag else 'PG'\n",
+    "print('{:^19}    {:^19} {:^9} {:>14} {:>12} {:>12}'.format(\n",
+    "    'Start_time', 'End_time', 'VolCount', \n",
+    "    f'ZeroReclaim_{units}', f'Target_{units}', f'Actual_{units}'))"
    ]
   },
   {
@@ -1823,7 +1867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
