--- a/PyTut3_LoopsFunctionsClasses.ipynb
+++ b/PyTut3_LoopsFunctionsClasses.ipynb
@@ -184,6 +184,325 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# List comprehensions\n",
+    "* Are a pythonic way of expressing a ‘for-loop’ that appends to a list in a single line of code.\n",
+    "\n",
+    "A list comprehension typically has 3 components:\n",
+    "\n",
+    "* The output (which can be string, number, list or any object you want to put in the list.)\n",
+    "* For Statements\n",
+    "* Conditional filtering (optional)\n",
+    "\n",
+    "Below is a typical format of a list comprehension;\n",
+    "\n",
+    "[[output expression] for(i in iterable) if(filter condition)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = []\n",
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        result.append(i)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = [i for i in range(10) if i%2 == 0]\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 27, 16, 125]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i**2 if i%2==0 else i**3 for i in [1,2,3,4,5]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Flatten a list of lists\n",
+    "mat = [[1,2,3,4], [5,6,7,8], [9,10,11,12], [13,14,15,16]]\n",
+    "[i for row in mat for i in row if i%2==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 2), (4, 8), (6, 2), (1, 3), (2, 7), (2, 7)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem Statement: For each number in list_b, get the number and its position in mylist as a list of tuples\n",
+    "mylist = [9, 3, 6, 1, 5, 0, 8, 2, 4, 7]\n",
+    "list_b = [6, 4, 6, 1, 2, 2]\n",
+    "[(i, mylist.index(i)) for i in list_b]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{6: 2, 4: 8, 1: 3, 2: 7}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dictionary comprehension\n",
+    "{i: mylist.index(i) for i in list_b}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Easter egg try 'import this'\n",
+    "words = '''\n",
+    "Beautiful is better than ugly.\n",
+    "Explicit is better than implicit.\n",
+    "Simple is better than complex.\n",
+    "Complex is better than complicated.\n",
+    "Flat is better than nested.\n",
+    "Sparse is better than dense.\n",
+    "Readability counts.\n",
+    "'''.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Beautiful': 1,\n",
+       " 'is': 6,\n",
+       " 'better': 6,\n",
+       " 'than': 6,\n",
+       " 'ugly.': 1,\n",
+       " 'Explicit': 1,\n",
+       " 'implicit.': 1,\n",
+       " 'Simple': 1,\n",
+       " 'complex.': 1,\n",
+       " 'Complex': 1,\n",
+       " 'complicated.': 1,\n",
+       " 'Flat': 1,\n",
+       " 'nested.': 1,\n",
+       " 'Sparse': 1,\n",
+       " 'dense.': 1,\n",
+       " 'Readability': 1,\n",
+       " 'counts.': 1}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i:words.count(i) for i in words}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.2 µs ± 123 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "# it's not always faster then other methods\n",
+    "{i:words.count(i) for i in words}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.01 µs ± 11.2 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "d = {}\n",
+    "for w in words: d[w] = d.get(w, 0) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['14', '-11']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Thinking outside the box\n",
+    "numbers = '1 7 2 0 -11 14 -3 -7'\n",
+    "[x(numbers.split(), key=int) for x in (max, min)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# While Loops\n",
     "* While loops are used when you don't know ahead of time how many times you'll have to loop"
    ]
@@ -713,6 +1032,36 @@
     "l.sort(key=lambda x,y : y)\n",
     "l"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise:\n",
+    "1. Write a function that takes a parameter 'n' and returns a list of sequential numbers from 0 up to 'n'.\n",
+    "1. Change function to allow iteration when 'n' is millions, but in a memory efficient way (hint 'yield and generators)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
