Day two updates

--- a/PyTut2_Types.ipynb
+++ b/PyTut2_Types.ipynb
@@ -1244,6 +1244,227 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Formatting\n",
+    "* Old 'C' style: https://docs.python.org/3/library/stdtypes.html#printf-style-bytes-formatting\n",
+    "* The 'format' method:\n",
+    "    - https://docs.python.org/3/tutorial/inputoutput.html#the-string-format-method\n",
+    "    - https://docs.python.org/3/library/string.html#formatstrings\n",
+    "* **New Style:**\n",
+    "    - **https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals**\n",
+    "    - **https://docs.python.org/3/library/string.html#formatspec**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# String formatting using modulus operator %\n",
+    "name = 'World'\n",
+    "num = 19\n",
+    "\n",
+    "print('Hello %s!' % name)\n",
+    "print('%d is my favorite number especially in hex: 0x%x' % (num, num))\n",
+    "print('Width and Precision can also be defined e.g. %10.4f' % 0.12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Newer 2.6+ format specifiers;\n",
+    "person = {'name': 'Mark', 'age':21}\n",
+    "\n",
+    "print('First={} Second={} Third={}'.format(1,2,'three'))\n",
+    "print('By position: First={2} Second={0} Third={1}{1}{1}'.format(1,2,'three'))\n",
+    "print('By variable: {x} is {y} at heart! '.format(x=person['name'], y=person['age']))\n",
+    "print('By dict: {name} is {age} at heart! '.format(**person))\n",
+    "print('I would really like £{:,.02f} in {!r}'.format(1000000, 'cash'))\n",
+    "print('Conversion: {0:d} = Hex({0:x}) = Oct({0:o}) = Binary {0:b}'.format(105))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ver 2.6+ also support left/right center justifiers <^>;\n",
+    "text = 'here'\n",
+    "print('X{:15}X{:>15}X{:^15}X{:<15}X'.format(text, text, text, text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The best new feature in python 3.6 is 'f' string interpolation;\n",
+    "import math, datetime\n",
+    "name = 'Mark Butty'\n",
+    "width, precision = 10, 5\n",
+    "\n",
+    "print(f'Hello {name} there are {len(name)} characters in your name')\n",
+    "print(f'5 x 4 = {5 * 4}')\n",
+    "print(f'PI is {math.pi:^{width}.{precision}} in binary')\n",
+    "print(f'Conversion also work: {105:d} = Hex({105:x}) = Oct({105:o}) = Binary {105:b}')\n",
+    "print(f'Today is {datetime.datetime.today():%A %B %d, %Y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mixing format and interpolation - useful for headings;\n",
+    "\n",
+    "mbflag = True\n",
+    "units = 'MB' if mbflag else 'PG'\n",
+    "print('{:^19}    {:^19} {:^9} {:>14} {:>12} {:>12}'.format(\n",
+    "    'Start_time', 'End_time', 'VolCount', \n",
+    "    f'ZeroReclaim_{units}', f'Target_{units}', f'Actual_{units}'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Type conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int('23')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(1.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(13) * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float('1.2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 21\n",
+    "blackjack = 'Pontoon ' + str(n)\n",
+    "print(type(n), type(blackjack))\n",
+    "print(blackjack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = '34'\n",
+    "print('Mark is %s' % age)\n",
+    "print('But this might be hex %d' % int(age, 16))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise:\n",
     "1. Create four variables, an integer, a float to 3 decimal places and two strings.\n",
     "1. Create a composite string of the two strings.\n",
@@ -1305,7 +1526,8 @@
     "list2 = [ 1, 2,\n",
     "        3, 4,\n",
     "        5, 6 ]\n",
-    "list3 = [ 'alpha', 2, 3.0, [ 'list in a list' ], myfunc ]"
+    "list3 = [ 'alpha', 2, 3.0, [ 'list in a list', 13, 14, 15 ], myfunc ]\n",
+    "list4 = list('abcdefg')"
    ]
   },
   {
@@ -1313,7 +1535,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(list1)\n",
+    "print(list2)\n",
+    "print(list3)\n",
+    "print(list4)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2497,8 +2724,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieve the first 4 characters\n",
-    "print(long_string[0:4])"
+    "# Retrieve some characters in the middle\n",
+    "print(long_string[5:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# At the beginning (these are equivilent)\n",
+    "print(long_string[0:10])\n",
+    "print(long_string[:10])"
    ]
   },
   {
@@ -2569,74 +2807,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# String formatting using modulus operator %\n",
-    "name = 'World'\n",
-    "num = 105\n",
-    "\n",
-    "print('Hello %s!' % name)\n",
-    "print('%d is my favorite number especially in hex: 0x%x' % (num, num))\n",
-    "print('Width and Precision can also be defined e.g. %10.4f' % 0.12345)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Newer 2.6+ format specifiers;\n",
-    "person = {'name': 'Mark', 'age':21}\n",
-    "\n",
-    "print('First={} Second={} Third={}'.format(1,2,'three'))\n",
-    "print('By position: First={2} Second={0} Third={1}{1}{1}'.format(1,2,'three'))\n",
-    "print('By variable: {x} is {y} at heart! '.format(x=person['name'], y=person['age']))\n",
-    "print('By dict: {name} is {age} at heart! '.format(**person))\n",
-    "print('I would really like £{:,.02f} in {!r}'.format(1000000, 'cash'))\n",
-    "print('Conversion: {0:d} = Hex({0:x}) = Oct({0:o}) = Binary {0:b}'.format(105))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ver 2.6+ also support left/right center justifiers <^>;\n",
-    "text = 'here'\n",
-    "print('X{:15}X{:>15}X{:^15}X{:<15}X'.format(text, text, text, text))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The best new feature in python 3.6 is 'f' string interpolation;\n",
-    "import math, datetime\n",
-    "name = 'Mark Butty'\n",
-    "width, precision = 10, 5\n",
-    "\n",
-    "print(f'Hello {name} there are {len(name)} characters in your name')\n",
-    "print(f'5 x 4 = {5 * 4}')\n",
-    "print(f'PI is {math.pi:^{width}.{precision}} in binary')\n",
-    "print(f'Conversion also work: {105:d} = Hex({105:x}) = Oct({105:o}) = Binary {105:b}')\n",
-    "print(f'Today is {datetime.datetime.today():%A %B %d, %Y}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mixing format and interpolation - useful for headings;\n",
-    "\n",
-    "mbflag = True\n",
-    "units = 'MB' if mbflag else 'PG'\n",
-    "print('{:^19}    {:^19} {:^9} {:>14} {:>12} {:>12}'.format(\n",
-    "    'Start_time', 'End_time', 'VolCount', \n",
-    "    f'ZeroReclaim_{units}', f'Target_{units}', f'Actual_{units}'))"
+    "# Looping over a sting:\n",
+    "for i in 'abcdefg':\n",
+    "    print(i)"
    ]
   },
   {
@@ -2645,6 +2818,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String methods"
+   ]
   },
   {
    "cell_type": "code",
@@ -2747,11 +2934,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Looping over a sting:\n",
-    "for i in 'abc':\n",
-    "    print(i)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
