--- a/PyTut3_LoopsFunctionsClasses.ipynb
+++ b/PyTut3_LoopsFunctionsClasses.ipynb
@@ -133,34 +133,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# You can use for loops to cycle through a list\n",
     "grocery_list = ['Juice', 'Tomatoes', 'Potatoes', 'Bananas']\n",
@@ -349,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The range keyword returns a *list:\n",
+    "# The range keyword returns a *list, or does it?\n",
     "for x in range(3, 10):\n",
     "    print(x , ' ', end=\"\")\n",
     "print('\\n')"
@@ -364,8 +336,16 @@
     "# However, in reality a range is a generator which yields the values back to the caller.\n",
     "# In python 2 it returns a list containing the range so there is also xrange to return a generator\n",
     "print('Python3 range =', range(5,10))  # Python2 generator is xrange\n",
-    "print('Python2 would use more memory and return a list =', list(range(5,10)))"
+    "print('Python2 would use more memory and return a list =', list(range(5,10)))\n",
+    "print(' - Imagine if that was 10000 items')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -495,7 +475,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# List comprehensions (& generator & dictionary) \n",
+    "# List comprehensions \n",
+    "### And generator comprehensions And dictionary comprehensions\n",
     "* Are a pythonic way of expressing a ‘for-loop’ that appends to a list in a single line of code.\n",
     "\n",
     "A list comprehension typically has 3 components:\n",
@@ -517,7 +498,7 @@
    "source": [
     "result = []\n",
     "for i in range(10):\n",
-    "    if i%2 == 0:\n",
+    "    if i % 2 == 0:\n",
     "        result.append(i)\n",
     "result"
    ]
