--- a/PyTut5_Files_CSV.ipynb
+++ b/PyTut5_Files_CSV.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are many common pathname manipulations:\n",
+    "### There are many pathname manipulation functions:\n",
     " - https://docs.python.org/3/library/os.path.html\n",
     "  - Common ones are abspath, basename, dirname, exists, join, split, splitext"
    ]
@@ -171,7 +171,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dir(os.path)"
+   ]
   },
   {
    "cell_type": "code",
@@ -302,8 +304,22 @@
     "import zipfile\n",
     "with zipfile.ZipFile('allconf.zip', 'r') as zipobj:\n",
     "    for i in zipobj.namelist():\n",
-    "        print(i)"
+    "        print(i)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -340,9 +356,9 @@
     "#### File methods:\n",
     " - `.read(size=-1)` Reads an entire file or up to *size* number of bytes.\n",
     " - `.readline(size=-1)` Reads the next line or up to *size* characters from the next line.\n",
-    " - `.readlines=()` Reads the remaining lines from the file as a list.\n",
+    " - `.readlines=()` Reads the remaining lines from the file as a list (including '\\n').\n",
     " - `.write(string or bytes)` Writes to the file.\n",
-    " - `.writelines(seq)` Writes the sequence to the file (note that line endings (\\n) are not appended).\n",
+    " - `.writelines(seq)` Writes the sequence to the file (note that line endings '\\n' are not appended).\n",
     " \n",
     " Note that the `print` statement also accepts a file object which can be an open file:\n",
     "     ```\n",
@@ -600,6 +616,30 @@
     "            line = line.strip()\n",
     "            print(f'[{i}] {line}')\n",
     "            if i > 3: break  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example of opening a zip file and directly reading the internal file \n",
+    "import zipfile\n",
+    "with zipfile.ZipFile('allconf.zip', 'r') as zipobj:\n",
+    "    text = zipobj.read('AllConf.csv').decode()   # A zipfile object is opened as binary so may need decode to string \n",
+    "\n",
+    "for i, line in enumerate(text.split('\\n')):\n",
+    "    print(line)\n",
+    "    if i > 5:\n",
+    "        break"
    ]
   },
   {
